      \item It is now possible to choose between different
      optimizers to be used in the inner iterations of the MQL/PQL
      estimator: One can choose between \code{nlm()}, \code{nlminb()},
      \code{ucminf()}, and most techniques provided by \code{optim()}.
      \item With \code{rebase()} the baseline category of a model
      can be changed without the need of refitting the model.
    }
  }
  \subsection{BUGFIXES}{
    \itemize{
      \item Singular initial covariance matrices no longer cause errors.
      \item A warning about unreliable results is issued if
      \code{anova()} is applied to models with random effects.
      \item Estimating of overdispersion with group data now works.
    }
  }
  \subsection{IMPROVEMENTS}{
    \itemize{
      \item \code{mclogit()} and \code{mblogit()} check whether the list
      passed as \code{control} is complete i.e. contains all the relevant
      named arguments.
      \item A \code{ranef()} method is provided for objects created
      by \code{mclogit()} or \code{mblogit()}.
    }
  }
}

\section{Version 0.8}{
  \subsection{NEW FEATURES}{
    \itemize{
      \item It is now possible to use the MQL estimation technique as an
      alternative to PQL.
      \item As an alternative to extending a logit model with random
      effects, it is now possible to add an over-dispersion parameter to
      the model.
      \item In addition to approximate the ML estimator, MQL and PQL
      have a variant that approximates the REML estimator.
      \item There is now a \code{simulate()} method for objects returned
      by \code{mblogit()} or \code{mclogit()} (but only for those
      without random effects).
      \item Predictions from random-effects models estimated using the
      PQL technique now are now conditional on the random effects
      (unless requested otherwise).
    }
  }
  \subsection{BUGFIXES}{
    \itemize{
      \item \code{mclogit()} now handles empty responses (i.e. counts that