@@ -69,7 +69,6 @@ export(rebase)
 S3method(rebase,mblogit)
 
 importFrom(nlme,ranef)
-export(ranef)
 S3method(ranef,mmclogit)
 
 importFrom(MASS,ginv)
