@@ -12,7 +12,8 @@
 mclogit.fit(y, s, w, X,
             dispersion=FALSE,
             start = NULL, offset = NULL,
-            control = mclogit.control())
+            control = mclogit.control(),
+            groups=NULL)
 
 mmclogit.fitPQLMQL(y, s, w, X, Z, d, 
                    start = NULL,
@@ -29,6 +30,8 @@ mmclogit.fitPQLMQL(y, s, w, X, Z, d,
   \item{X}{a model matrix; required.}
   \item{dispersion}{a logical value or a character string; whether and how
      a dispersion parameter should be estimated. For details see \code{\link{dispersion}}.}
+  \item{groups}{a vector that identifies the groups relevant 
+     for the estimation of the dispersion parameter.}
   \item{Z}{the random effects design matrix.}
   \item{d}{dimension of random effects. Typically $d=1$ for random intercepts
   only, $d>1$ for models with random intercepts.}
